# wobbly-life-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: ci.yml  release.yml
crates/wle-cli/: Cargo.toml
crates/wle-cli/src/: main.rs
crates/wle-core/: Cargo.toml
crates/wle-core/src/: binfmt.rs  binfmt_write.rs  edit.rs  editor.rs  json.rs  lib.rs  model.rs  saves.rs
crates/wle-core/tests/: core_tests.rs
crates/wle-gui/: Cargo.toml
crates/wle-gui/src/: main.rs
reference-data/GameSaves/: SaveInfo.sav
reference-data/GameSaves/SaveSlot_1/: MissionData.sav  PlayerData_1.sav  PlayerData_2.sav  PlayerData_3.sav  PlayerSettingsData_1.sav  PlayerSettingsData_2.sav  PlayerSettingsData_3.sav  SlotInfo.sav  StatsData.sav  WorldData.sav
