[workspace]
members = ["crates/wle-core", "crates/wle-cli", "crates/wle-gui"]
resolver = "2"
default-members = ["crates/wle-core", "crates/wle-cli", "crates/wle-gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jari Ravantti"]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
